[package]
name = "ddathome-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
tungstenite = { version = "0.17.2",features = ["native-tls"] }
json = "0.12.4"
reqwest = { version = "0.11", features = ["blocking"] }
uuid = { version = "1.0.0",features = ["v4","fast-rng","macro-diagnostics"] }
clap = { version = "3.0", features = ["derive"] }
url = { version = "2.2.2" }
chrono = "0.4.19"