[package]
name = "ddathome-rust"
version = "0.1.1"
edition = "2021"
[[bin]]
name = "ddathome"
path = "src/main.rs"


[dependencies]
tungstenite = { version = "0.17.2",features = ["rustls-tls-webpki-roots"] }
json = "0.12.4"
reqwest = { version = "0.11", features = ["blocking","rustls-tls"] }
uuid = { version = "1.0.0",features = ["v4","fast-rng","macro-diagnostics"] }
clap = { version = "3.0", features = ["derive"] }
url = { version = "2.2.2" }
chrono = "0.4.19"